fluxcd/clusters/pi/home/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: home
  labels:
    app: sonarr
spec:
  replicas: 0
  strategy:
    type: Recreate  # required for ReadWriteOnce pvc
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      name: sonarr
      namespace: home
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.17
          ports:
            - containerPort: 8989
              name: sonarr-port

          volumeMounts:
            - name: sonarr-configs
              mountPath: /config
            - name: media-root
              mountPath: /media

          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "500m"

      volumes:
        - name: media-root
          nfs:
            server: 192.168.86.10
            path: /nfs/media
            readOnly: false
        - name: sonarr-configs
          persistentVolumeClaim:
            claimName: sonarr-configs-local
