fluxcd/clusters/pi/home/sonarr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: home
  labels:
    app: sonarr
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      name: sonarr
      namespace: home
      labels:
        app: sonarr
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.14
          ports:
            - containerPort: 8989
              name: sonarr-port
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          volumeMounts:
            - name: sonarr-configs
              mountPath: /config
            - name: media-root
              mountPath: /media
      volumes:
        - name: media-root
          nfs:
            server: 192.168.86.11
            path: /mnt/nas/media
            readOnly: false
  volumeClaimTemplates:
    - metadata:
        name: sonarr-configs
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 3Gi
