fluxcd/clusters/pi/home/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: home
spec:
  selector:
    app: sonarr
  ports:
    - name: sonarr-port
      port: 80
      targetPort: sonarr-port
