fluxcd/clusters/pi/home/sonarr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress-route
  namespace: home
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
  # middlewares:
  #   - name: default-headers
  tls:
    secretName: local-fellowfreak-dev-production-tls
